Bug 57056 - search.rdf not being migratedr=racham, r=rjc, sr=waterson